Fixed Business Detail Website Overflow

--- a/react-app/src/components/BusinessDetails/BusinessDetail.css
+++ b/react-app/src/components/BusinessDetails/BusinessDetail.css
@@ -171,6 +171,7 @@
   align-items: center;
   justify-content: space-between;
   padding-right: 10px;
+  overflow: hidden;
 }
 
 .business-detail-phone {
